# toposync

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  Dockerfile.registry  README.md  README.pt-BR.md  SECURITY.md  SUPPORT.md  docker-compose.cuda.yml  docker-compose.local-build.yml  docker-compose.yml  hatch_build.py  package-lock.json  package.json  playwright.config.js  playwright.distribution.config.js  pyproject.toml  readme.md  wrangler.toml
extensions/ai/: README.md  pyproject.toml
extensions/ai/src/toposync_ext_ai/: __init__.py  catalog.py  constants.py  extension.json  plugin.py  providers.py  router.py  settings.py  usage.py
extensions/ai/src/toposync_ext_ai/pipelines/: __init__.py  image_utils.py  operators.py  runtime.py  schemas.py
extensions/ai/src/toposync_ext_ai/static/: 326.js  387.js  754.js  main.js  remoteEntry.js
extensions/ai/ui/: package.json  webpack.config.js
extensions/ai/ui/src/: activate.tsx  constants.ts  translations.ts  types.ts
extensions/ai/ui/src/api/: aiApi.ts
extensions/ai/ui/src/operators/: AiOperatorPanels.tsx
extensions/ai/ui/src/settings/: AiSettingsPanel.tsx
extensions/cameras/: README.md  pyproject.toml
extensions/cameras/src/toposync_ext_cameras/: __init__.py  capture_service.py  extension.json  plugin.py  processor_server.py  settings.py  source_health.py
extensions/cameras/src/toposync_ext_cameras/onvif/: __init__.py  client.py  discovery.py  events.py
extensions/cameras/src/toposync_ext_cameras/pipelines/: __init__.py  operators.py  postprocess.py
extensions/cameras/src/toposync_ext_cameras/processing/: camera_hub.py  frame_grabber.py  mapping.py  motion.py  motion_bgsub.py  motion_sample_bg.py  remote.py  runtime.py  tracker.py  tracking_db.py  yolo.py
extensions/cameras/src/toposync_ext_cameras/static/: 326.js  4.js  623.js  703.js  753.js  main.js  remoteEntry.js
extensions/cameras/ui/: package.json  webpack.config.js
extensions/cameras/ui/src/: activate.tsx  assets.d.ts  constants.ts  parsing.ts  theme.ts  translations.ts  types.ts  yolo.ts
extensions/cameras/ui/src/api/: camerasApi.ts
extensions/cameras/ui/src/elements/: CameraElementType.tsx  camera_element_type.tsx
extensions/cameras/ui/src/notifications/: CameraTrackingNotificationRenderer.tsx  cameraTracking3dOverlay.ts
extensions/cameras/ui/src/settings/: CameraDetectionsModal.tsx  CameraPipelinePresetModal.tsx  CamerasSettingsPanel.tsx  DetectionConditionEditor.tsx  VisionModelConsentModal.tsx  camera_detections_modal.tsx  cameras_settings_panel.tsx  visionModelCatalog.ts
extensions/cameras/ui/src/tools/: addCameraTool.ts  add_camera_tool.ts
extensions/cameras/ui/src/ui/: SubModal.tsx  sub_modal.tsx
extensions/cinematic/: README.md  pyproject.toml
extensions/cinematic/src/toposync_ext_cinematic/: constants.py  extension.json  plugin.py  status.py  wizard.py
extensions/cinematic/ui/: package.json  webpack.config.js
extensions/cinematic/ui/src/: activate.tsx  api.ts  translations.ts  types.ts
extensions/cinematic/ui/src/settings/: SubModal.tsx  (+1 more)
extensions/hello_lamp/: README.md  pyproject.toml
extensions/hello_lamp/src/toposync_ext_hello_lamp/: __init__.py  extension.json  plugin.py
extensions/hello_lamp/ui/: package.json  webpack.config.js
extensions/hello_lamp/ui/src/: activate.tsx  entry.ts
extensions/home_assistant/: README.md  pyproject.toml
extensions/home_assistant/src/toposync_ext_home_assistant/: __init__.py  connection.py  extension.json  pipelines.py  plugin.py
extensions/home_assistant/ui/: package.json  tsconfig.json  webpack.config.js
extensions/home_assistant/ui/src/: activate.tsx  airflow.ts  constants.ts  domain.ts  entry.ts  fontawesome.ts  liveStates.ts  live_states.ts  parsing.ts  translations.ts  types.ts
extensions/images/: README.md  pyproject.toml
extensions/images/src/toposync_ext_images/: extension.json  plugin.py
extensions/images/ui/: package.json  webpack.config.js
extensions/images/ui/src/: activate.tsx  constants.ts  debug.ts  imageUtils.ts  parsing.ts  translations.ts  types.ts
extensions/models/: LICENSE  README.md  pyproject.toml
extensions/models/src/toposync_ext_models/: __init__.py  extension.json  plugin.py
extensions/models/ui/: package.json  webpack.config.js
extensions/models/ui/src/: activate.tsx  constants.ts  debug.ts  parsing.ts  translations.ts  types.ts
extensions/spatial_video/: LICENSE  README.md  pyproject.toml
extensions/spatial_video/src/toposync_ext_spatial_video/: __init__.py  extension.json  plugin.py
extensions/spatial_video/ui/: package.json  tsconfig.json  webpack.config.js
extensions/spatial_video/ui/src/: SpatialVideo3DView.tsx  SpatialVideoCompatibilityNotice.tsx  SpatialVideoView.tsx  activate.tsx  api.ts  areaClip.ts  candidates.ts  cycjimmy-jsmpeg-player.d.ts  markers.ts  projection.ts  projectionGeometry.ts  ptzProjection.ts  spatialSettings.ts  streamTexture.ts  translations.ts  types.ts
extensions/streaming/: LICENSE.ffmpeg  README.md  pyproject.toml
extensions/streaming/src/toposync_ext_streaming/: extension.json  plugin.py
extensions/streaming/ui/: package.json  tsconfig.json  webpack.config.js
extensions/streaming/ui/src/: activate.tsx  constants.ts  entry.ts  translations.ts  types.ts
extensions/structural/: README.md  pyproject.toml
extensions/structural/src/toposync_ext_structural/: extension.json  plugin.py
extensions/structural/ui/: package.json  tsconfig.wall-geometry-test.json  webpack.config.js
extensions/structural/ui/src/: activate.tsx  colors.ts  constants.ts  geometry.ts  measurementOverlay.ts  parsing.ts  textures.ts  translations.ts  wallGeometry.test.ts  wallGeometry.ts  wallOpenings.ts
extensions/vision/: README.md  hatch_build.py  pyproject.toml
extensions/vision/manifests/: rfdetr_det_medium.json  rfdetr_det_nano.json  rfdetr_det_small.json  rtmdet_det_medium.json  rtmdet_det_small.json  rtmdet_det_tiny.json  rtmdet_ins_medium.json  rtmdet_ins_small.json  rtmdet_ins_tiny.json
extensions/vision/src/toposync_ext_vision/: extension.json  plugin.py
(+680 files in other folders)
