[project]
name = "toposync"
version = "0.3.0"
description = "Toposync core runtime (Python backend + extension host)."
readme = "readme.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "pydantic>=2.8",
  "python-multipart>=0.0.9",
  "uvicorn>=0.30",
]

[project.scripts]
toposync = "toposync.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.3",
  "ruff>=0.8",
]
extensions = [
  "toposync-ext-structural",
  "toposync-ext-models",
  "toposync-ext-home-assistant",
  "toposync-ext-images",
  "toposync-ext-cameras",
  "toposync-ext-vision",
  "toposync-ext-streaming",
]

[tool.uv]
default-groups = ["dev", "extensions"]

[tool.uv.sources]
toposync-ext-structural = { path = "extensions/structural", editable = true }
toposync-ext-models = { path = "extensions/models", editable = true }
toposync-ext-home-assistant = { path = "extensions/home_assistant", editable = true }
toposync-ext-images = { path = "extensions/images", editable = true }
toposync-ext-cameras = { path = "extensions/cameras", editable = true }
toposync-ext-vision = { path = "extensions/vision", editable = true }
toposync-ext-streaming = { path = "extensions/streaming", editable = true }

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/toposync"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
markers = [
  "integration: marks tests that depend on external runtime processes (ffmpeg/mediamtx).",
]
