[project]
name = "toposync-ext-cameras"
version = "0.4.2"
description = "Toposync first-party extension: RTSP cameras and camera pipeline operators."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = ["toposync-core>=0.3.0", "numpy>=1.26", "opencv-python-headless>=4.10", "pillow>=10,<13"]

[project.entry-points."toposync.extensions"]
cameras = "toposync_ext_cameras.plugin:CamerasExtension"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/toposync_ext_cameras"]
