[project]
name = "toposync-ext-hello-lamp"
version = "0.1.0"
description = "Toposync example extension: Hello Lamp (prebuilt frontend + Python hook)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["toposync>=0.1.0"]

[project.entry-points."toposync.extensions"]
hello_lamp = "toposync_ext_hello_lamp.plugin:HelloLampExtension"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/toposync_ext_hello_lamp"]
