[project]
name = "toposync-ext-home-assistant"
version = "0.1.0"
description = "TopoSync first-party extension: Home Assistant integration (scaffold)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["toposync>=0.1.0"]

[project.entry-points."toposync.extensions"]
home_assistant = "toposync_ext_home_assistant.plugin:HomeAssistantExtension"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/toposync_ext_home_assistant"]

