[project]
name = "toposync-ext-home-assistant"
version = "0.2.0"
description = "Toposync first-party extension: Home Assistant integration (scaffold)."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = ["toposync-core>=0.3.3", "httpx>=0.27", "websockets>=12.0"]

[project.entry-points."toposync.extensions"]
home_assistant = "toposync_ext_home_assistant.plugin:HomeAssistantExtension"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/toposync_ext_home_assistant"]
