[project]
name = "toposync-ext-images"
version = "0.1.8"
description = "Toposync first-party extension: import images as overlays or tracing references."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = ["toposync-core>=0.3.0"]

[project.entry-points."toposync.extensions"]
images = "toposync_ext_images.plugin:ImagesExtension"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/toposync_ext_images"]
