[project]
name = "toposync-ext-spatial-video"
version = "0.4.5"
description = "Toposync first-party extension: projected live video on mapped compositions."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = ["toposync-core>=0.7.5"]

[project.entry-points."toposync.extensions"]
spatial_video = "toposync_ext_spatial_video.plugin:SpatialVideoExtension"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/toposync_ext_spatial_video"]
