[project]
name = "toposync-ext-structural"
version = "0.1.0"
description = "TopoSync first-party extension: Structural drawing tools (2D walls/areas)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["toposync>=0.1.0"]

[project.entry-points."toposync.extensions"]
structural = "toposync_ext_structural.plugin:StructuralExtension"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/toposync_ext_structural"]
