[project]
name = "toposync-ext-structural"
version = "0.2.1"
description = "Toposync first-party extension: Structural drawing tools (2D walls/areas)."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = ["toposync-core>=0.3.0"]

[project.entry-points."toposync.extensions"]
structural = "toposync_ext_structural.plugin:StructuralExtension"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/toposync_ext_structural"]
