[project]
name = "toposync-ext-vision"
version = "0.1.0"
description = "Toposync first-party extension: task-oriented vision operators."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "toposync>=0.1.0",
  "toposync-ext-cameras>=0.1.0",
  "numpy>=1.26,<3",
  "norfair>=2.2,<3",
  "onnx>=1.17",
  "onnxruntime>=1.20",
]
[project.entry-points."toposync.extensions"]
vision = "toposync_ext_vision.plugin:VisionExtension"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/toposync_ext_vision"]
