[project]
name = "toposync-ext-vision"
version = "0.1.13"
description = "Toposync first-party extension: task-oriented vision operators."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
  "toposync-core>=0.3.0",
  "toposync-ext-cameras>=0.1.0",
  "numpy>=1.26,<3",
  "norfair>=2.2,<3",
  "onnx>=1.17,<2",
  "huggingface_hub>=0.34,<1",
  "pillow>=10,<13",
]
[project.entry-points."toposync.extensions"]
vision = "toposync_ext_vision.plugin:VisionExtension"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.sdist]
exclude = [
  "/models",
  "/models/**",
]

[tool.hatch.build.targets.wheel]
packages = ["src/toposync_ext_vision"]
